--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_application_1">
+    package="com.example.smart_taal_system">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="SMARt Taal System"
