--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: smart_taal_system
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
