--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,10 @@ dependencies:
   searchfield:
   dropdown_search:
   flutter_typeahead:
-  path_provider:
+  path_provider: ^2.0.9
   path: any
   table_calendar:
   convex_bottom_bar:
-  flutter_offline:
   filter_list:
   connectivity_plus:
   top_snackbar_flutter:
@@ -48,6 +47,14 @@ dependencies:
   loading_animations:
   provider:
   introduction_screen:
+  audioplayers:
+  image_picker:
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  fluttertoast:
+  shared_preferences:
+  url_launcher:
   flutter:
     sdk: flutter
 
@@ -55,6 +62,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite:
+  device_info_plus: ^3.2.2
 
 dev_dependencies:
   flutter_test:
@@ -93,6 +101,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/onboarding/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -124,7 +134,11 @@ flutter:
         - asset: fonts/Montserrat-Medium.ttf
         - asset: fonts/Montserrat-MediumItalic.ttf
           style: italic
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 400
         - asset: fonts/Montserrat-ExtraBold.ttf
           weight: 700
+        - asset: fonts/Montserrat-Black.ttf
+          weight: 900
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
